fix possible syntax error

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
     <script>
       import '/react-snowpack/_dist_/index.js';
     </script>
-    <script type="module" src="/react-snowpack/_dist_/index.js" />
+    <script type="module" src="/react-snowpack/_dist_/index.js"></script>
   </body>
 </html>
