--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="description" content="Example React app with Snowpack.js" />
     <title>React Snowpack App Example</title>
   </head>
+
   <body>
     <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script
-      type="module"
-      src="https://doddydigitaldesign.github.io/react-snowpack/_dist_/index.js"
-    ></script>
+    <script>
+      import '/react-snowpack/_dist_/index.js';
+    </script>
+    <script type="module" src="/react-snowpack/_dist_/index.js"></script>
   </body>
 </html>
