add module type to script tag

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script>
+    <script type="module">
       import '/react-snowpack/_dist_/index.js';
     </script>
     <script type="module" src="/react-snowpack/_dist_/index.js"></script>
