--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script>
-      import '/react-snowpack/_dist_/index.js';
+    <script type="module">
+      import './react-snowpack/_dist_/index.js';
     </script>
     <script type="module" src="/react-snowpack/_dist_/index.js"></script>
   </body>
