--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
   <body>
     <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="module">
+    <script type="module" referrerpolicy="no-referrer" crossorigin="anonymous">
       if (window && window.location) {
         import("./_dist_/index.js");
       }
     </script>
-    <script type="module" src="/react-snowpack/_dist_/index.js"></script>
+    <script
+      type="module"
+      src="/react-snowpack/_dist_/index.js"
+      referrerpolicy="no-referrer"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
